app fees - 1 bip poc
